[gd_scene load_steps=12 format=3 uid="uid://crn7631bng61f"]

[ext_resource type="Script" path="res://Scenes/UI/end_screen.gd" id="1_3wnom"]
[ext_resource type="PackedScene" uid="uid://bbcgucbi2vr16" path="res://Scenes/Components/random_stream_player_2d_component.tscn" id="2_87eec"]
[ext_resource type="AudioStream" uid="uid://bej4i025wik3p" path="res://Resources/Audio/Sound Effects/Death/3yell1.wav" id="3_kpg1t"]
[ext_resource type="AudioStream" uid="uid://cnx510870mxfb" path="res://Resources/Audio/Sound Effects/Death/3yell2.wav" id="4_imbj5"]
[ext_resource type="AudioStream" uid="uid://vb2uih8x844o" path="res://Resources/Audio/Sound Effects/Death/3yell3.wav" id="5_tv7uj"]
[ext_resource type="AudioStream" uid="uid://c0rh1pat7tl67" path="res://Resources/Audio/Sound Effects/Death/3yell4.wav" id="6_30y6n"]
[ext_resource type="AudioStream" uid="uid://cvleexo7s7y56" path="res://Resources/Audio/Sound Effects/Death/3yell5.wav" id="7_a5rrc"]
[ext_resource type="AudioStream" uid="uid://dgcx3rf5vfnhy" path="res://Resources/Audio/Sound Effects/Death/3yell6.wav" id="8_o8psm"]

[sub_resource type="Animation" id="Animation_5wr82"]
resource_name = "death_animation"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.156863), Color(0.94902, 0, 0, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_b5fcs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.156863)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y76bl"]
_data = {
"RESET": SubResource("Animation_b5fcs"),
"death_animation": SubResource("Animation_5wr82")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_3wnom")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.156863)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(180, 140)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="EndLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "This evening's show
is done"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Score: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RestartButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bring in another"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Retire"

[node name="DeathRandomStreamPlayer2DComponent" parent="." instance=ExtResource("2_87eec")]
streams = Array[AudioStream]([ExtResource("3_kpg1t"), ExtResource("4_imbj5"), ExtResource("5_tv7uj"), ExtResource("6_30y6n"), ExtResource("7_a5rrc"), ExtResource("8_o8psm")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ColorRect")
autoplay = "death_animation"
libraries = {
"": SubResource("AnimationLibrary_y76bl")
}
